# parquet-io-accelerator

./: .gitignore  Cargo.toml  README.md  build.rs
benches/parquet/: compression.rs  main.rs  metadata.rs
src/: lib.rs
src/compression/: brotli.rs  gzip.rs  lz4.rs  lzo.rs  mod.rs  snappy.rs  uncompressed.rs  zstd.rs
src/metadata/: mod.rs
