[package]
name = "parquet-io-accelerator"
version = "0.1.0"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Compression
snap = "1"
flate2 = "1"
rust-lzo = "0.6"
brotli = "3"
lz4_flex = { version = "0.8", default-features = false }
zstd = "0.9"

# Metadata
thrift = "0.13"

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.8", features = ["small_rng"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[[bench]]
name = "parquet"
harness = false
